--- a/chromium/manifest.json
+++ b/chromium/manifest.json
@@ -15,6 +15,7 @@
     "http://*/*",
     "https://*/*"
   ],
+  "options_page": "options.html",
   "background": {
     "scripts": [
       "background.js"
