Building system refactored..

--- a/chromium/Makefile
+++ b/chromium/Makefile
@@ -1,5 +1,10 @@
-all: $(addprefix icon_,$(addsuffix .png,128 64 48 32 16 19))
- 
-icon_%.png: icon.svg
-	@echo Bake icon $*x$*..
-	@inkscape --export-png=$@ --export-width=$* --export-height=$* $^
+TARGET:=help clean
+
+help:
+	@echo targets: $(TARGET)
+
+build:
+
+clean:
+
+include Makepath/*.mk
